tests/integration/snapshots/integration__conformance__n_object_lone_continuation_byte_in_key_and_trailing_comma.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 1
success: false
stdin ---
raw bytes: [123, 34, 185, 34, 58, 34, 48, 34, 44, 125]
stdout ---

stderr ---
error: byte 0xB9 cannot start a UTF-8 sequence
 --> stdin:1:3
  |
1 | {"�":"0",}
  |   ^
